--- a/src/test/resources/test_at.cfg
+++ b/src/test/resources/test_at.cfg
@@ -1,8 +1,8 @@
-public-f net.minecraftforge.accesstransformer.testJar.ATTestClass finalPrivateField
-protected net.minecraftforge.accesstransformer.testJar.ATTestClass privateField
+public-f net.neoforged.accesstransformer.testJar.ATTestClass finalPrivateField
+protected net.neoforged.accesstransformer.testJar.ATTestClass privateField
 
-public net.minecraftforge.accesstransformer.testJar.ATTestClass privateMethod()V
+public net.neoforged.accesstransformer.testJar.ATTestClass privateMethod()V
 
-public net.minecraftforge.accesstransformer.testJar.DefaultClass
+public net.neoforged.accesstransformer.testJar.DefaultClass
 
-public net.minecraftforge.accesstransformer.testJar.DefaultClass$Inner
+public net.neoforged.accesstransformer.testJar.DefaultClass$Inner
