--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
-  <name>MinecraftForge_accesstransformers Config DSL Script</name>
-  <groupId>MinecraftForge_accesstransformers</groupId>
-  <artifactId>MinecraftForge_accesstransformers_dsl</artifactId>
+  <name>MinecraftForge_neoforged_AccessTransformers Config DSL Script</name>
+  <groupId>MinecraftForge_neoforged_AccessTransformers</groupId>
+  <artifactId>MinecraftForge_neoforged_AccessTransformers_dsl</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <parent>
@@ -22,7 +22,7 @@
     </repository>
     <repository>
       <id>teamcity-server</id>
-      <url>https://teamcity.MinecraftForge.net/app/dsl-plugins-repository</url>
+      <url>https://teamcity.neoforged.net/app/dsl-plugins-repository</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
