--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'antlr'
     id 'net.neoforged.gradleutils' version '2.+'
+    id 'signing'
 }
 
 apply plugin: 'maven-publish'
@@ -43,23 +44,17 @@ jar.manifest = manifest {
                 'Specification-Vendor': 'neoforged',
                 'Specification-Version': '1', // Currently version 1 of the accesstransformer specification
                 'Implementation-Title': project.name,
-                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
+                'Implementation-Version': "${project.version}+${gradleutils.gitInfo.abbreviatedId}",
                 'Implementation-Vendor': 'neoforged',
-                'Implementation-Timestamp': java.time.Instant.now().toString(),
-                'Git-Commit': gradleutils.gitInfo.abbreviatedId,
-                'Git-Branch': gradleutils.gitInfo.branch,
-                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}" ],
+                'Git-Commit': gradleutils.gitInfo.abbreviatedId],
             'net/neoforged/accesstransformer/service/')
     attributes(['Specification-Title': 'accesstransformers',
                 'Specification-Vendor': 'neoforged',
                 'Specification-Version': '1', // Currently version 1 of the accesstransformer specification
                 'Implementation-Title': project.name,
-                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
+                'Implementation-Version': "${project.version}+${gradleutils.gitInfo.abbreviatedId}",
                 'Implementation-Vendor': 'neoforged',
-                'Implementation-Timestamp': java.time.Instant.now().toString(),
-                'Git-Commit': gradleutils.gitInfo.abbreviatedId,
-                'Git-Branch': gradleutils.gitInfo.branch,
-                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}" ],
+                'Git-Commit': gradleutils.gitInfo.abbreviatedId],
             'net/neoforged/accesstransformer/')
 }
 
@@ -172,6 +167,15 @@ artifacts {
     archives shadowJar
 }
 
+if (System.getenv('GPG_PRIVATE_KEY')) {
+    signing {
+        final signingKey = System.getenv('GPG_PRIVATE_KEY') ?: ''
+        final signingPassword = System.getenv('GPG_KEY_PASSWORD') ?: ''
+        useInMemoryPgpKeys(signingKey, signingPassword)
+        sign publishing.publications.mavenJava
+    }
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -207,6 +211,12 @@ publishing {
                     developer {
                         id = 'DemonWav'
                         name = 'DemonWav'
+                    }
+                    developer {
+                        id = 'neoforged'
+                        name = 'NeoForged'
+                        email = 'contact@neoforged.net'
+                        url = 'https://github.com/NeoForged/'
                     }
                 }
             }
