--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,41 @@
-pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        maven { url = 'https://maven.neoforged.net/releases/' }
+dependencyResolutionManagement {
+    versionCatalogs {
+        libs {
+            plugin('gradleutils', 'net.neoforged.gradleutils').version('3.+')
+            plugin('shadow', 'com.github.johnrengelman.shadow').version('8.1.1')
+
+            final log4j = version 'log4j', '2.12.4'
+            final asm = version 'asm', '9.4'
+            final antlr = version 'antlr', '4.13.1'
+            final jupiter = version 'jupiter', '5.7.2'
+
+            library('modlauncher', 'cpw.mods:modlauncher:10.1.7')
+            library('sjh', 'cpw.mods:securejarhandler:2.1.11')
+            library('bsl', 'cpw.mods:bootstraplauncher:1.1.5')
+            library('gson', 'com.google.code.gson:gson:2.8.9')
+            library('slf4j', 'org.slf4j:slf4j-api:2.0.9')
+            library('jopt', 'net.sf.jopt-simple:jopt-simple:6.0-alpha-3')
+            library('jopt5', 'net.sf.jopt-simple:jopt-simple:5.0.4')
+
+            library('log4j-api', 'org.apache.logging.log4j', 'log4j-api').versionRef(log4j)
+            library('log4j-core', 'org.apache.logging.log4j', 'log4j-core').versionRef(log4j)
+            bundle('log4j', ['log4j-api', 'log4j-core'])
+
+            library('asm-core', 'org.ow2.asm', 'asm').versionRef(asm)
+            library('asm-tree', 'org.ow2.asm', 'asm-tree').versionRef(asm)
+            library('asm-commons', 'org.ow2.asm', 'asm-commons').versionRef(asm)
+            bundle('asm', ['asm-core', 'asm-tree', 'asm-commons'])
+
+            library('antlr', 'org.antlr', 'antlr4').versionRef(antlr)
+            library('antlr-runtime', 'org.antlr', 'antlr4-runtime').versionRef(antlr)
+
+            library('junit-api', 'org.junit.jupiter', 'junit-jupiter-api').versionRef(jupiter)
+            library('junit-engine', 'org.junit.jupiter', 'junit-jupiter-engine').versionRef(jupiter)
+            library('powermock', 'org.powermock:powermock-core:2.0+')
+        }
     }
 }
 
 rootProject.name = 'AccessTransformers'
-
+include ':cli'
+include ':modlauncher'
