--- a/settings.gradle
+++ b/settings.gradle
@@ -39,3 +39,4 @@ dependencyResolutionManagement {
 rootProject.name = 'AccessTransformers'
 include ':cli'
 include ':modlauncher'
+include ':parser'
