--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ build.dependsOn testsJar
 dependencies {
     testImplementation(libs.junit.api)
     testImplementation(libs.powermock)
+    testImplementation(libs.assert4j)
     testImplementation(libs.bsl)
     testImplementation(libs.sjh)
     testImplementation(libs.gson)
