--- a/build.gradle
+++ b/build.gradle
@@ -53,10 +53,6 @@ group 'net.neoforged'
 
 println('Version: ' + version)
 
-sourceSets {
-    testJars
-}
-
 jar.manifest = manifest {
     attributes([
             'Specification-Title': 'accesstransformers',
@@ -69,16 +65,9 @@ jar.manifest = manifest {
     ])
 }
 
-tasks.register('testsJar', Jar) {
-    archiveClassifier = 'testsjar'
-    from sourceSets.testJars.output
-}
-
 changelog {
     from '10.0'
 }
-
-build.dependsOn testsJar
 
 dependencies {
     testImplementation(libs.junit.api)
@@ -88,6 +77,8 @@ dependencies {
     testImplementation(libs.bundles.log4j)
     testRuntimeOnly(libs.junit.engine)
 
+    testCompileOnly(libs.annotations)
+
     api(libs.slf4j)
     api(libs.bundles.asm)
     api(project(':parser'))
@@ -96,8 +87,6 @@ dependencies {
 test {
     useJUnitPlatform()
 }
-
-test.dependsOn(testJarsClasses)
 
 publishing {
     publications {
