--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,14 @@
 dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+        maven {
+            name = 'neoforged'
+            url = 'https://maven.neoforged.net/releases/'
+        }
+    }
     versionCatalogs {
         libs {
-            plugin('gradleutils', 'net.neoforged.gradleutils').version('3.0.0-alpha.12')
+            plugin('gradleutils', 'net.neoforged.gradleutils').version('5.0.0')
             plugin('shadow', 'com.github.johnrengelman.shadow').version('8.1.1')
 
             final log4j = version 'log4j', '2.12.4'
