--- a/src/test/resources/test_at.cfg
+++ b/src/test/resources/test_at.cfg
@@ -3,19 +3,19 @@
 public net.minecraft.client.audio.SoundManager field_148622_c #sndHandler
 # Block
 public net.minecraft.block.Block <init>(Lnet/minecraft/block/material/Material;)V
-public net.minecraft.block.Block func_149752_b(F)Lnet.minecraft.block.Block; #setResistance
-public net.minecraft.block.Block func_149711_c(F)Lnet.minecraft.block.Block; #setHardness
-public net.minecraft.block.Block func_149713_g(I)Lnet.minecraft.block.Block; #setLightOpacity
-public net.minecraft.block.Block func_149715_a(F)Lnet.minecraft.block.Block; #setLightValue
-public net.minecraft.block.Block func_149722_s()Lnet.minecraft.block.Block; #setBlockUnbreakable
-public net.minecraft.block.Block func_149675_a(Z)Lnet.minecraft.block.Block; #setTickRandomly
+public net.minecraft.block.Block func_149752_b(F)Lnet/minecraft/block/Block; #setResistance
+public net.minecraft.block.Block func_149711_c(F)Lnet/minecraft/block/Block; #setHardness
+public net.minecraft.block.Block func_149713_g(I)Lnet/minecraft/block/Block; #setLightOpacity
+public net.minecraft.block.Block func_149715_a(F)Lnet/minecraft/block/Block; #setLightValue
+public net.minecraft.block.Block func_149722_s()Lnet/minecraft/block/Block; #setBlockUnbreakable
+public net.minecraft.block.Block func_149675_a(Z)Lnet/minecraft/block/Block; #setTickRandomly
 public net.minecraft.block.Block func_180637_b(Lnet/minecraft/world/World;Lnet/minecraft/util/math/BlockPos;I)V # dropXpOnBlockBreak
 # BlockFire
 public net.minecraft.block.BlockFire func_176532_c(Lnet/minecraft/block/Block;)I # getFireSpreadSpeed
 public net.minecraft.block.BlockFire func_176534_d(Lnet/minecraft/block/Block;)I # getFireSpreadSpeed
 # Item
-public net.minecraft.item.Item func_77656_e(I)Lnet.minecraft.item.Item; #setMaxDamage
-public net.minecraft.item.Item func_77627_a(Z)Lnet.minecraft.item.Item; #setHasSubtypes
+public net.minecraft.item.Item func_77656_e(I)Lnet/minecraft/item/Item; #setMaxDamage
+public net.minecraft.item.Item func_77627_a(Z)Lnet/minecraft/item/Item; #setHasSubtypes
 # EntityPlayer
 public net.minecraft.entity.player.EntityPlayer func_71053_j()V #closeScreen
 # EntityTrackerEntry
